[project]
name = "nes-recycle"
version = "0.0.2"
description = "CLI tool for previewing and submitting the Nespresso recycling pickup form over HTTP"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Rio Fujita", email = "rio_github@rio.st" }
]
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-cov>=4",
]

[project.scripts]
nes_recycle = "nes_recycle.main:main"

[project.urls]
Homepage = "https://github.com/rioriost/homebrew-nes_recycle"
Issues = "https://github.com/rioriost/homebrew-nes_recycle/issues"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nes_recycle"]

[tool.hatch.build.targets.sdist]
include = [
  "src/nes_recycle/*.py",
  "README.md",
  "LICENSE",
  "Formula/nes_recycle.rb",
]
exclude = [
  "uv.lock",
  "dist/.DS_Store",
  ".envrc",
  "confirm_form.html",
]

[tool.nes_recycle.homebrew]
formula_path = "Formula/nes_recycle.rb"
formula_class = "NesRecycle"
desc = "CLI tool for previewing and submitting the Nespresso recycling pickup form over HTTP"
homepage = "https://github.com/rioriost/homebrew-nes_recycle"
license = "MIT"
python = "python@3.11"
package_name = "nes_recycle"

[tool.nes_recycle.homebrew.urls]
stable = "https://github.com/rioriost/homebrew-nes_recycle/archive/refs/tags/v0.0.1.tar.gz"

[tool.nes_recycle.homebrew.sha256]
stable = "REPLACE_WITH_SOURCE_TARBALL_SHA256"

[tool.nes_recycle.homebrew.formula_template]
content = '''
class NesRecycle < Formula
  include Language::Python::Virtualenv

  desc "CLI tool for previewing and submitting the Nespresso recycling pickup form over HTTP"
  homepage "https://github.com/rioriost/homebrew-nes_recycle"
  url "https://github.com/rioriost/homebrew-nes_recycle/archive/refs/tags/v0.0.1.tar.gz"
  sha256 "REPLACE_WITH_SOURCE_TARBALL_SHA256"
  license "MIT"

  depends_on "python@3.11"

  def install
    virtualenv_install_with_resources
  end

  test do
    assert_match "usage", shell_output("#{bin}/nes_recycle --help")
  end
end
'''
