[project]
name = "nes-recycle"
version = "0.0.4"
description = "CLI tool for previewing and submitting the Nespresso recycling pickup form over HTTP"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Rio Fujita", email = "rio_github@rio.st" }
]
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-cov>=4",
]

[project.scripts]
nes_recycle = "nes_recycle.main:main"

[project.urls]
Homepage = "https://github.com/rioriost/nes_recycle"
Issues = "https://github.com/rioriost/nes_recycle/issues"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nes_recycle"]

[tool.hatch.build.targets.sdist]
include = [
  "src/nes_recycle/*.py",
  "README.md",
  "LICENSE",
  "Formula/nes_recycle.rb",
]
exclude = [
  "uv.lock",
  "dist/.DS_Store",
  ".envrc",
  "confirm_form.html",
]
