[project]
name = "nes-recycle"
version = "0.0.5"
description = "CLI tool for previewing and submitting the Nespresso recycling pickup form over HTTP"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
  { name = "Rio Fujita", email = "rio_github@rio.st" }
]
requires-python = ">=3.14"
dependencies = []

[project.urls]
Homepage = "https://github.com/rioriost/nes_recycle"
Issues = "https://github.com/rioriost/nes_recycle/issues"
Repository = "https://github.com/rioriost/nes_recycle"

[project.scripts]
nes_recycle = "nes_recycle.main:main"

[project.optional-dependencies]
test = [
  "pytest>=9",
  "pytest-cov>=7",
]

[dependency-groups]
dev = [
  "build>=1.2.2",
  "twine>=6.1.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
